--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/beans.xml'
+    }
+}
+
+repositories {
+    maven {
+        url 'http://4thline.org/m2'
+    }
 }
 
 dependencies {
@@ -33,5 +42,12 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+
+    compile group: 'org.fourthline.cling', name: 'cling-core', version:'2.1.0'
+    compile group: 'org.fourthline.cling', name: 'cling-support', version:'2.1.0'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version:'8.1.18.v20150929'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version:'8.1.18.v20150929'
+    compile group: 'org.eclipse.jetty', name: 'jetty-client', version:'8.1.18.v20150929'
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.14'
 
 }
