--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
@@ -51,6 +53,11 @@
             android:name=".services.amstelbright.AmstelBrightService"
             android:exported="false" >
         </service>
+
+        <service android:name=".services.ssdp.SSDPService" />
+
+        <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl"/>
+
 
         <activity android:name=".tvui.MainframeActivity">
             <intent-filter>
