--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
     packagingOptions {
         exclude 'META-INF/beans.xml'
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 repositories {
