--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
+    <!--<uses-feature android:name="android.hardware.camera" android:required="false"/>-->
+
+
     <!-- Application is subclassed for a default Realm -->
     <application
         android:name=".core.ABApplication"
@@ -22,7 +25,9 @@
         android:icon="@mipmap/og_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
+        <uses-library android:name="com.realtek" />
         <service
             android:name=".services.udp.UDPBeaconService"
             android:enabled="true" />
