--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -38,6 +40,9 @@
             android:enabled="true" />
         <service
             android:name=".services.stbservice.STBService"
+            android:enabled="true" />
+        <service
+            android:name=".services.ssdpservice.SSDPService"
             android:enabled="true" />
         <service
             android:name=".services.http.HTTPDService"
