Crash recovery code. Added very thin RootActivity which just passes thru TV and starts services. New unhandled exception handler which catches everything uncaught then restarts the app after a 5 second delay.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- permission required to use Alarm Manager -->
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -68,6 +70,20 @@
             android:enabled="true" />
 
         <activity android:name=".tvui.MainframeActivity">
+            <!--<intent-filter>-->
+                <!--&lt;!&ndash; Starting activity for this application &ndash;&gt;-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+                <!--&lt;!&ndash; Means that this app should appear on the launcher (app menu for OS)&ndash;&gt;-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+
+
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <!--&lt;!&ndash; The following intent-filter says this is a candidate for home screen &ndash;&gt;-->
+                <!--<category android:name="android.intent.category.HOME" />-->
+            <!--</intent-filter>-->
+        </activity>
+
+        <activity android:name=".tvui.RootActivity">
             <intent-filter>
                 <!-- Starting activity for this application -->
                 <action android:name="android.intent.action.MAIN"/>
