--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,33 +5,28 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- permission required to use Alarm Manager -->
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
-
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <!-- Application is subclassed for a default Realm -->
     <application
-        android:launchMode="singleTask"
         android:name=".core.ABApplication"
         android:allowBackup="true"
         android:icon="@mipmap/og_launcher"
         android:label="@string/app_name"
+        android:launchMode="singleTask"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -45,7 +40,6 @@
         <service
             android:name=".services.ogdpservice.OGDPService"
             android:enabled="true" />
-
         <service
             android:name=".services.stbservice.STBPollingService"
             android:enabled="true" />
@@ -73,27 +67,26 @@
             android:enabled="true" />
 
         <activity android:name=".tvui.MainframeActivity">
-            <!--<intent-filter>-->
-                <!--&lt;!&ndash; Starting activity for this application &ndash;&gt;-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-                <!--&lt;!&ndash; Means that this app should appear on the launcher (app menu for OS)&ndash;&gt;-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+
+            <!-- <intent-filter> -->
+            <!-- &lt;!&ndash; Starting activity for this application &ndash;&gt; -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+            <!-- &lt;!&ndash; Means that this app should appear on the launcher (app menu for OS)&ndash;&gt; -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
 
 
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--&lt;!&ndash; The following intent-filter says this is a candidate for home screen &ndash;&gt;-->
-                <!--<category android:name="android.intent.category.HOME" />-->
-            <!--</intent-filter>-->
+            <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+            <!-- &lt;!&ndash; The following intent-filter says this is a candidate for home screen &ndash;&gt; -->
+            <!-- <category android:name="android.intent.category.HOME" /> -->
+            <!-- </intent-filter> -->
         </activity>
-
         <activity android:name=".tvui.RootActivity">
             <intent-filter>
+
                 <!-- Starting activity for this application -->
-                <action android:name="android.intent.action.MAIN"/>
-                <!-- Means that this app should appear on the launcher (app menu for OS)-->
+                <action android:name="android.intent.action.MAIN" />
+                <!-- Means that this app should appear on the launcher (app menu for OS) -->
                 <category android:name="android.intent.category.LAUNCHER" />
-
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <!-- The following intent-filter says this is a candidate for home screen -->
                 <category android:name="android.intent.category.HOME" />
@@ -108,37 +101,43 @@
         <!-- </intent-filter> -->
         <!-- </receiver> -->
 
+
         <!-- The below was causing errors because it called an inner static class in the -->
         <!-- WiFiManageActivity that in turn tried to call something on ABService which -->
         <!-- had not started yet! -->
 
-        <!--<receiver android:name=".tvui.wifi.WifiManageActivity$WifiReceiver" >-->
-            <!--<intent-filter android:priority="100">-->
-                <!--<action android:name="android.net.wifi.STATE_CHANGE" />-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
 
-        <!--<activity-->
-            <!--android:name=".tvui.stb.DirecTVPairActivity"-->
-            <!--android:theme="@style/Theme.AppCompat.Translucent">-->
-        <!--</activity>-->
+        <!-- <receiver android:name=".tvui.wifi.WifiManageActivity$WifiReceiver" > -->
+        <!-- <intent-filter android:priority="100"> -->
+        <!-- <action android:name="android.net.wifi.STATE_CHANGE" /> -->
+        <!-- </intent-filter> -->
+        <!-- </receiver> -->
+
+
+        <!-- <activity -->
+        <!-- android:name=".tvui.stb.DirecTVPairActivity" -->
+        <!-- android:theme="@style/Theme.AppCompat.Translucent"> -->
+        <!-- </activity> -->
 
         <activity
             android:name=".tvui.stb.SetTopBoxPairActivity"
-            android:theme="@style/Theme.AppCompat.Translucent">
-        </activity>
+            android:theme="@style/Theme.AppCompat.Translucent"></activity>
+        <activity
+            android:name=".tvui.stb.STBPairConfirmActivity"
+            android:theme="@style/Theme.AppCompat.Translucent"></activity>
 
-        <activity android:name=".tvui.stb.STBPairConfirmActivity"
-            android:theme="@style/Theme.AppCompat.Translucent">
-        </activity>
-
-        <!--<activity-->
-            <!--android:name=".tvui.wifi.WifiManageActivity"-->
-            <!--android:theme="@style/Theme.AppCompat.Translucent">-->
-
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".tvui.wifi.WifiManageActivity" -->
+        <!-- android:theme="@style/Theme.AppCompat.Translucent"> -->
 
 
+        <!-- </activity> -->
+
+        <service
+            android:name=".services.logcat.LogCatRotationService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission."></service>
     </application>
 
 </manifest>
